[package]
name = "miror-project-from-js-01"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# for database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal"]}
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
reqwest = "0.13.2"
